[gd_scene load_steps=7 format=3 uid="uid://bcunmbtjin7dc"]

[ext_resource type="Script" uid="uid://cijgjvk73wx0q" path="res://scenes/game_scene/activity/spray/spray_scene.gd" id="1_r6wo5"]
[ext_resource type="Texture2D" uid="uid://b1rwvx87egy0s" path="res://assets/room/spray_active.png" id="2_hbeo6"]
[ext_resource type="Texture2D" uid="uid://ds8ddralnynut" path="res://assets/alien/yellow.png" id="3_bd5mg"]
[ext_resource type="Texture2D" uid="uid://d0waahgvrdtrh" path="res://assets/spray/clump_1.png" id="4_k061k"]
[ext_resource type="Texture2D" uid="uid://bkl3deml7hegn" path="res://assets/spray/clump_2.png" id="5_o6la8"]
[ext_resource type="Texture2D" uid="uid://cfb1pairk8m36" path="res://assets/spray/clump_3.png" id="6_x437l"]

[node name="SprayScene" type="Node2D"]
script = ExtResource("1_r6wo5")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_hbeo6")

[node name="Alien" type="Sprite2D" parent="."]
texture = ExtResource("3_bd5mg")

[node name="Clump0" type="Sprite2D" parent="Alien"]
visible = false
position = Vector2(-80, -85)
texture = ExtResource("4_k061k")

[node name="Clump1" type="Sprite2D" parent="Alien"]
visible = false
position = Vector2(81, -97)
texture = ExtResource("5_o6la8")

[node name="Clump2" type="Sprite2D" parent="Alien"]
visible = false
position = Vector2(87, 64)
texture = ExtResource("4_k061k")

[node name="Clump3" type="Sprite2D" parent="Alien"]
visible = false
position = Vector2(-81, 62)
texture = ExtResource("6_x437l")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Button0" type="Button" parent="Control"]
layout_mode = 0
offset_left = -235.0
offset_top = -320.0
offset_right = -149.0
offset_bottom = -239.0

[node name="Button1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 167.0
offset_top = -322.0
offset_right = 253.0
offset_bottom = -241.0

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 185.0
offset_top = 245.0
offset_right = 271.0
offset_bottom = 326.0

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = -283.0
offset_top = 263.0
offset_right = -197.0
offset_bottom = 344.0

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="Control/Button0" to="." method="clean" binds= [0]]
[connection signal="pressed" from="Control/Button1" to="." method="clean" binds= [1]]
[connection signal="pressed" from="Control/Button2" to="." method="clean" binds= [2]]
[connection signal="pressed" from="Control/Button3" to="." method="clean" binds= [3]]
